# OAK-blockchain

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  body.md  docker-compose.yml  oak-testnet-spec.json  oak-testnet.json  para-2000-genesis  para-2000-wasm  rust-toolchain.toml  try-runtime.sh
.devcontainer/: devcontainer.json
.github/hooks/: pre-commit
.github/workflows/: benchmark.yml  build-docker.yml  cargo-build-test.yml  changelog.yml  check.yml  deploy-docs.yml  lint.yml  neumann-docker.yml  release.yml  stale_activity.yml  test-code.yml  turing-dev-docker.yml  version-bump.yml
.maintain/: HEADER-GPL3  frame-weight-template.hbs  generate-release-notes  getgoing.sh  runtime-dep.py
.maintain/build-docs/: build-docs.sh
.maintain/debian/: defaults  oak-collator.service
.maintain/docker/: subkey.Dockerfile  substrate.Dockerfile
.maintain/kubernetes/: Chart.yaml
automation_time/: automation_time-raw-weights.rs
aws/: buildspec.yml  buildspec2.yml  neumann_buildspec.yml  neumann_ci_buildspec.yml  neumann_manual_buildspec.yml  oak_ci_buildspec.yml  oak_manual_buildspec.yml  turing_buildspec.yml  turing_ci_buildspec.yml  turing_manual_buildspec.yml
distribution/: neumann_alloc.json  neumann_vest_test_alloc.json  neumann_vesting.json  neumann_vesting_local.json  oak_alloc.json  oak_vesting.json  turing_alloc.json  turing_staging_alloc.json  turing_vesting.json
docs/: node-setup.md  validator-setup.md
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/res/: oak-testnet.json
node/cli/src/: chain_spec.rs  command.rs  lib.rs  service.rs
node/cli/src/chain_spec/: mod.rs  oak_testnet.rs  turing.rs
node/cli/tests/: build_spec_works.rs  check_block_works.rs  common.rs  export_import_flow.rs  inspect_works.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  telemetry.rs  temp_base_path_works.rs  version.rs
node/executor/: Cargo.toml
node/executor/tests/: common.rs  fees.rs
node/res/: neumann-rococo-testnet.json  neumann.json  oak-staging.json  turing-staging.json  turing.json
node/runtime/: Cargo.toml
node/runtime/src/: constants.rs  lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  tests.rs
node/src/chain_spec/: mod.rs  neumann.rs  oak.rs  turing.rs
node/testing/: Cargo.toml
node/testing/src/: genesis.rs
pallets/automation-price/rpc/runtime-api/: Cargo.toml
pallets/automation-price/rpc/runtime-api/src/: lib.rs
pallets/automation-time/: Cargo.toml
pallets/automation-time/rpc/: Cargo.toml
pallets/automation-time/rpc/runtime-api/: Cargo.toml
pallets/automation-time/rpc/runtime-api/src/: lib.rs
pallets/automation-time/rpc/src/: lib.rs
pallets/automation-time/src/: action.rs  autocompounding.rs  base.rs  benchmarking.rs  exchange.rs  fees.rs  lib.rs  migrations.rs  mock.rs  task.rs  tests.rs  tests_calculation.rs  types.rs  weights.rs  xcm_test.rs
pallets/automation-time/src/migrations/: add_schedule_to_task.rs  mod.rs  update_task_idv2.rs  update_xcmp_task.rs  upgrade_weight_struct.rs  upgrade_xcmp_task_struct.rs  utils.rs  v5.rs
pallets/automation-time/src/migrations/old/: add_schedule_to_task.rs  mod.rs  v4.rs
pallets/open-grant/: Cargo.toml  types.json
pallets/open-grant/src/: benchmarking.rs  lib.rs  weights.rs
pallets/parachain-info/: Cargo.toml
pallets/poc/: Cargo.toml
pallets/poc/src/: lib.rs
pallets/quadratic-funding/: Cargo.toml
pallets/quadratic-funding/src/: benchmarking.rs  lib.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
pallets/valve/: Cargo.toml
pallets/valve/src/: benchmarking.rs  lib.rs  mock.rs  raw-weights.rs  tests.rs  traits.rs  weights.rs
pallets/vesting/: Cargo.toml
pallets/vesting/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/xcmp-handler/: Cargo.toml
pallets/xcmp-handler/rpc/: Cargo.toml
pallets/xcmp-handler/rpc/runtime-api/: Cargo.toml
pallets/xcmp-handler/rpc/runtime-api/src/: lib.rs
pallets/xcmp-handler/rpc/src/: lib.rs
pallets/xcmp-handler/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/xcmp-handler/src/migrations/: add_flow_to_currency_data.rs  add_location_to_currency_data.rs  convert_currency_data_to_asset_config.rs  convert_currency_data_to_asset_data.rs  migrate_to_transact_info.rs  mod.rs  upgrade_weight_struct.rs
pallets/xcmp-handler/src/migrations/old/: add_flow_to_currency_data.rs  add_mgx_tur_chain_currency_combo.rs  mod.rs
parachain-launch/: config.yml  docker-compose.yml  local-2000.json  parachain-2000.Dockerfile  relaychain.Dockerfile  rococo-local.json
polkadot-launch/: config.json
primitives/: Cargo.toml
primitives/src/: assets.rs  lib.rs  tokens.rs
resources/: bootstrap-parachain-config.yaml  bootstrap-relaychain-config.yaml  neumann-126.json  neumann-latest.json  neumann-parachain.yaml  neumann-plain.json  neumann-testnet-parachain.yaml  neumann.json  rococo-local.json  rococo-testnet-relaychain.yaml  rococo-testnet.json  rococo.json  turing-live-chain-spec.json
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  fees.rs  impls.rs  lib.rs
runtime/neumann/: Cargo.toml
runtime/neumann/src/: fee_handler.rs  lib.rs  xcm_config.rs
runtime/neumann/src/weights/: asset_registry_weights.rs
runtime/oak/: Cargo.toml
runtime/oak/src/: lib.rs  xcm_config.rs
runtime/oak/src/weights/: asset_registry_weights.rs  mod.rs  pallet_xcm.rs
runtime/src/: constants.rs  lib.rs  multiaddress.rs
runtime/turing/: Cargo.toml  build.rs
runtime/turing/src/: lib.rs  migrations.rs  xcm_config.rs
runtime/turing/src/migrations/: mod.rs  register_shiden_asset.rs
runtime/turing/src/migrations/old/: assets.rs  mod.rs  register_shiden_asset.rs
runtime/turing/src/weights/: asset_registry_weights.rs  mod.rs  pallet_xcm.rs
scripts/: prepare-test-net.sh  run-pallet-benchmarks.sh  try-runtime.sh
valve/: valve-raw-weights.rs
vesting/: vesting-raw-weights.rs
xcmp_handler/: xcmp_handler-raw-weights.rs
zombienets/: xcmp.toml
(+57 files in other folders)
