[package]
name = "primitives"
version = "1.0.0"
description = "Runtime primitives"
authors = ["OAK Developement Team"]
license = "GPL-3.0"
homepage = "https://oak.tech"
repository = 'https://github.com/OAK-Foundation/OAK-blockchain'
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
  "derive",
], default-features = false }
scale-info = { version = "2.1", default-features = false, features = [
  "derive",
] }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

## Substrate FRAME Dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

## Polkdadot deps
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43", default-features = false }

## ORML deps
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-runtime/std",
]
